GNOME Bugzilla – Bug 701072
crash when nmapping rtsp-server
Last modified: 2014-02-25 22:27:51 UTC
The rtsp server fails when nmapping the host. The reason is that gst_rtsp_client_accept returns FALSE without setting *error to anything and default_accept_client then dereferences *error to type the error message, resulting in crashes. Working on a patch...
Created attachment 245376 [details] [review] Patch Turns out there are two problems: 1. the mentioned error problem 2. when accept returns false, we return false from the io function. I beliave this is wrong. There is no reason to stop accepting incoming connections because an earlier client caused error.
commit c75e1c6b4741cfe9f3ad4264271ce472f66de7c2 Author: Alexander Schrab <alexas@axis.com> Date: Mon May 27 12:58:07 2013 +0200 rtsp-server: Do not crash on nmapping of server * generate error when gst_rtsp_connection_accept fails * do not stop accepting incoming connections because accepting a client fails https://bugzilla.gnome.org/show_bug.cgi?id=701072